// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`KpiCardComponent should render kpi card with difference 1`] = `
<div
  id="root1"
>
  <mat-card
    class="mat-mdc-card mdc-card dashboard-card"
  >
    <mat-card-header
      class="mat-mdc-card-header dashboard-card__header"
    >
      <div
        class="mat-mdc-card-header-text"
      >
        <mat-card-title
          class="mat-mdc-card-title"
        >
          <h3
            class="kpi-title"
          >
            BESUCHER
          </h3>
        </mat-card-title>
      </div>
    </mat-card-header>
    <mat-card-content
      class="mat-mdc-card-content dashboard-card-content kpi-result"
    >
      <span>
        10000000
      </span>
      <p>
        10%
      </p>
      
    </mat-card-content>
  </mat-card>
</div>
`;

exports[`KpiCardComponent should render kpi card without difference 1`] = `
<div
  id="root0"
>
  <mat-card
    class="mat-mdc-card mdc-card dashboard-card"
  >
    <mat-card-header
      class="mat-mdc-card-header dashboard-card__header"
    >
      <div
        class="mat-mdc-card-header-text"
      >
        <mat-card-title
          class="mat-mdc-card-title"
        >
          <h3
            class="kpi-title"
          >
            BESUCHER
          </h3>
        </mat-card-title>
      </div>
    </mat-card-header>
    <mat-card-content
      class="mat-mdc-card-content dashboard-card-content kpi-result"
    >
      <span>
        10000000
      </span>
      
    </mat-card-content>
  </mat-card>
</div>
`;
